Menu alignment corrected - CSS
css update - menu alignment corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,30 +9,32 @@ box-sizing: border-box;
 
 body {
     line-height: 1.5em;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
-h1 {
-    font-family: 'Noto Sans JP', sans-serif;
-    font-size: 2.5em;
+h1, h2, h3, h4, p, ul, .nav, .main-header, footer, .container {
     text-align: center;
+    font-family: 'Noto Sans JP', sans-serif;
+
+  }
+
+h1 {
+  
+    font-size: 2.5em;
 }
 
 h2 {
-    font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.5m;
-    text-align: center;
     margin-top: 4em;
     margin-bottom: 4em;
    }
 
 h3 {
-    font-family: 'Noto Sans JP', sans-serif;
     font-size: 1.25m;
-    text-align: center;
+   
    }
 
 h4 {
-    font-family: 'Noto Sans JP', sans-serif;
     font-weight: 300;
     font-size: large;
     text-align: center;
@@ -40,10 +42,8 @@ h4 {
    }
 
    p {
-    font-family: 'Noto Sans JP', sans-serif;
     font-weight: 300;
     font-size: large;
-    text-align: center;
     line-height: normal;
    }
 
@@ -75,14 +75,13 @@ main-header {
     display: block;
     background: white;
     border-radius: .3em;
-
     margin-bottom: 2em;
     text-align:center;
-    font-family: 'Noto Sans JP', sans-serif;
+}
 
 main-header a {
         padding: 0.65em  1.25em;
-      
+}  
 
 
 ul {
@@ -90,21 +89,43 @@ ul {
     margin: 25;
     padding: 25;
     overflow: auto;
-    text-align: center;
-    font-family: 'Noto Sans JP', sans-serif;
+    list-style: none;
+}
 
+ul li {
+    padding: 2px;
   }
+  
+  ul li a {
+    text-decoration: none;
+  }
+  
+  footer {
+    padding: 50px 0;
+  }
+  
+
+
 
 /* ================================= 
   Media Queries
 ==================================== */
 
-@media (min-width: 769px) {
+@media (min-width: 320px) {
 
     .project {
         width: 100%;
     }
 
+
+
+
+    @media (min-width: 768x) {
+
+        .project {
+            width: 100%;
+        }
+    
 
 
 
